--- a/src/index.css
+++ b/src/index.css
@@ -33,83 +33,82 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.violet-gradient {
-  background: #804dee;
-  background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+.red-blue-gradient {
+  background: #dc2626;
+  background: linear-gradient(-90deg, #dc2626 0%, rgba(37, 99, 235, 0.8) 100%);
   background: -webkit-linear-gradient(
     -90deg,
-    #804dee 0%,
-    rgba(60, 51, 80, 0) 100%
+    #dc2626 0%,
+    rgba(37, 99, 235, 0.8) 100%
   );
 }
 
-.green-pink-gradient {
-  background: "#00cea8";
-  background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
-  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+.red-blue-card-gradient {
+  background: "#2563eb";
+  background: linear-gradient(90.13deg, #2563eb 1.9%, #dc2626 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #2563eb 1.9%, #dc2626 97.5%);
 }
 
-.orange-text-gradient {
-  background: #f12711; /* fallback for old browsers */
+.red-text-gradient {
+  background: #dc2626;
   background: -webkit-linear-gradient(
     to top,
-    #f12711,
-    #f5af19
-  ); /* Chrome 10-25, Safari 5.1-6 */
+    #dc2626,
+    #ef4444
+  );
   background: linear-gradient(
     to top,
-    #f12711,
-    #f5af19
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    #dc2626,
+    #ef4444
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.green-text-gradient {
-  background: #11998e; /* fallback for old browsers */
+.blue-light-text-gradient {
+  background: #3b82f6;
   background: -webkit-linear-gradient(
     to top,
-    #11998e,
-    #38ef7d
-  ); /* Chrome 10-25, Safari 5.1-6 */
+    #2563eb,
+    #60a5fa
+  );
   background: linear-gradient(
     to top,
-    #11998e,
-    #38ef7d
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    #2563eb,
+    #60a5fa
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .blue-text-gradient {
-  /* background: -webkit-linear-gradient(#eee, #333); */
-  background: #56ccf2; /* fallback for old browsers */
+  background: #1e40af;
   background: -webkit-linear-gradient(
     to top,
-    #2f80ed,
-    #56ccf2
-  ); /* Chrome 10-25, Safari 5.1-6 */
+    #1e40af,
+    #3b82f6
+  );
   background: linear-gradient(
     to top,
-    #2f80ed,
-    #56ccf2
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    #1e40af,
+    #3b82f6
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.pink-text-gradient {
-  background: #ec008c; /* fallback for old browsers */
+.red-light-text-gradient {
+  background: #b91c1c;
   background: -webkit-linear-gradient(
     to top,
-    #ec008c,
-    #fc6767
-  ); /* Chrome 10-25, Safari 5.1-6 */
+    #b91c1c,
+    #ef4444
+  );
   background: linear-gradient(
     to top,
-    #ec008c,
-    #fc6767
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    #b91c1c,
+    #ef4444
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
